# YcdAnimationExtractor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs  resource_reader.rs  ycd_parse.rs
